--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,7 +31,7 @@ security:
             pattern: ^/
             form_login:
                 provider: chain_provider
-                csrf_provider: form.csrf_provider
+                csrf_provider: security.csrf.token_manager
             logout: ~
             anonymous: ~
             http_basic: ~
